@@ -19,7 +19,7 @@
 	<property name="package.name" value="freenono" />
 
 	<property name="name" value="FreeNono" />
-	<property name='app.version' value='0.4' />
+	<property name='app.version' value='0.5' />
 	<property name='app.name' value='FreeNono' />
 
 
